Playing with few more tasks-copy files

--- a/02-second-azure-pipeline.yml
+++ b/02-second-azure-pipeline.yml
@@ -23,3 +23,12 @@ stages:
     - bash: echo $(System.DefaultWorkingDirectory)
     - bash: ls -R $(System.DefaultWorkingDirectory)
     - bash: echo $(Build.ArtifactStagingDirectory)
+    - bash: java -version
+    - bash: mvn -version
+    - bash: ls -R $(System.ArtifactStagingDirectory)
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '$(System.DefaultWorkingDirectory)'
+        Contents: '**/*.yaml'
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    - bash: ls -R $(System.ArtifactStagingDirectory)
