--- a/deployment.yaml
+++ b/deployment.yaml
@@ -56,8 +56,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels: #PODS
-    app: currency-exchange
-  name: currency-exchange
+    app: spring-azure-poc
+  name: spring-azure-poc
   namespace: default
 spec:
   ports:
@@ -66,6 +66,6 @@ spec:
     protocol: TCP
     targetPort: 8000 #CHANGE
   selector:
-    app: currency-exchange
+    app: spring-azure-poc
   sessionAffinity: None #CHANGE
   type: LoadBalancer
